# ycx 算法基础课
add_subdirectory(01chapter01)
add_subdirectory(02chapter01)
add_subdirectory(03week1)
add_subdirectory(04chapter01)
add_subdirectory(05chapter02)
add_subdirectory(06week2)
add_subdirectory(07chapter02)

# huguang 数据结构
add_subdirectory(21LinkList&SequenList)
add_subdirectory(22Queue&Stack)

# others
# add_subdirectory(x)
