# 高精度 + - * /
add_executable(051_add 0201add.cpp)
add_executable(051_sub 0201sub_1.cpp)
add_executable(051_mul 0201mul.cpp)
add_executable(051_div 0201div.cpp)

# 前缀和

add_executable(06qianzuihe1 020201.cpp)
add_executable(06qianzuihe2 020202.cpp)

# 差分

add_executable(07chafen1 020301.cpp)
add_executable(08chafen2 020302.cpp)