# 高精度 + - * /
add_executable(1_add 0201add.cpp)
add_executable(1_sub 0201sub_1.cpp)
add_executable(1_mul 0201mul.cpp)
add_executable(1_div 0201div.cpp)

# 前缀和

add_executable(qianzuihe1 020201.cpp)
add_executable(qianzuihe2 020202.cpp)

# 差分

add_executable(chafen1 020301.cpp)
add_executable(chafen2 020302.cpp)